--- a/.tern-config
+++ b/.tern-config
@@ -4,8 +4,8 @@
         "es-modules": {}
     },
     "libs": [
-        "ecma5",
+        "browser",
         "ecma6"
     ],
-    "ecmaVersion": 6
+    "ecmaVersion": 5
 }
